# affilipilot

./: .gitignore  CHANGELOG.md  HEARTBEAT.md  KNOWN_LIMITATIONS.md  MIGRATION_GUIDE.md  Makefile  README.md  ROADMAP.md  pyproject.toml
affilipilot/: __main__.py  _cli_legacy.py  budget.py  cli.py  config.py  db.py  engagement.py  media.py  media_quality.py  models.py  offer.py  provider_failures.py  quality.py  readiness.py  security.py  snailbot_integration.py  strategy.py  video_media.py  video_probe.py
config/: multi-source.mother-baby-expanded.json  multi-source.mother-baby.json  multi-source.smart-shopping.json  profit-scan-broader.json  seed-hunter-keywords.json  tier-config.json
data/: last_real_fb_batch.txt
docs/: OPERATING_MODEL.md  accesstrade-link-creator.md  accesstrade-publisher-api-notes-20260519.md  affiliate-optimization-gates.md  automation-first.md  budget-control.md  build-proposal.md  campaign-status.md  channel-approval.md  compliance-policy-mom-baby.md  discover-convert.md  doctor.md  facebook-dry-run-plan.md  facebook-token-manager.md  first-real-publish-checklist.md  integration-readiness.md  lazada-channel-links.md  manual-affiliate-workflow.md  marketplace-adapters.md  media-pipeline.md  multi-media-publishing.md  next-action.md  openclaw-telegram-bridge.md  operations.md  product-scanner.md  publish-gate.md  publish-requirements.md  publish-safe.md  quickstart.md  ready-to-publish.md  seed-source-upgrade.md  smart-shopping-positioning.md  telegram-commands.md  telegram-delivery.md  tracking-strategy.md
examples/: mom_baby_links.txt  product_links.txt  products.csv
scripts/: auto_publish_e2e.py  delete_facebook_posts.py  e2e_smoke_fixture.sh  facebook_token_renew.sh  scheduled_e2e_queue.sh  scheduled_facebook_insights_sync.sh  secret_scan.py  seed_hunter.py  seed_to_auto_e2e.py  smoke_affilipilot.sh  smoke_product_scanner.sh  verify_all.sh
tests/: test_accesstrade_catalog_deals_reports.py  test_accesstrade_enrich.py  test_accesstrade_isclix_fallback.py  test_accesstrade_links.py  test_accesstrade_official_api.py  test_accesstrade_shopee_sheets.py  test_accesstrade_shortlink_flow.py  test_affiliate_media_gate.py  test_affiliate_optimization_sprints.py  test_affiliate_ready_workflow.py  test_ai_caption_first.py  test_ai_caption_quality_gate.py  test_ai_caption_retry_flow.py  test_approval_card_v2.py  test_approval_workflow.py  test_auto_source_hunter.py  test_auto_source_hunter_media_enrichment.py  test_auto_source_hunter_quality.py  test_auto_source_niche.py  test_automation_sprints.py  test_batch_status.py  test_browser_exec.py  test_campaign_status.py  test_caption_planner_v2.py  (+74 more)
(+131 files in other folders)
