[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "affilipilot"
version = "0.1.0"
description = "Money-first, approval-gated Accesstrade/Shopee affiliate assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Snail"}]
keywords = ["affiliate", "accesstrade", "shopee", "facebook", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP",
]
# stdlib-only by design — no runtime dependencies. Optional extras below for
# specific code paths (browser rendering, dev tooling).
dependencies = []

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
affilipilot = "affilipilot.cli:main"

[project.urls]
Repository = "https://github.com/lxquang1990-cloud/affilipilot"

[tool.setuptools.packages.find]
include = ["affilipilot*"]
exclude = ["tests*", "data*", "docs*"]

[tool.setuptools.package-data]
affilipilot = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: requires real network or browser runtime",
]

[tool.coverage.run]
source = ["affilipilot"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 60
show_missing = true

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg (common pattern here for Path defaults)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "RUF"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# Strict mode is a long-term goal; for now keep it loose-but-useful.
ignore_missing_imports = true
